--- a/src/app/components/Widgets/WeatherWidget/WeatherWidget.module.scss
+++ b/src/app/components/Widgets/WeatherWidget/WeatherWidget.module.scss
@@ -15,6 +15,6 @@
   display: grid;
   grid-row-gap: 2vh;
   grid-column-gap: 2vw;
-  grid-template-rows: repeat(1, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  // grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
